--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav{
+  padding-bottom:  10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-right: 15px;
 }
-
-.App-link {
-  color: #61dafb;
+.logo{
+  font-size:  50px ;
+  margin-left: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input{
+  border: none;
+}
+.all{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+h1{
+  text-align: center;
+margin-bottom: 15px;
+  font-weight: bold;
 }
